2004-04-18  Daniel Steffen <das@users.sourceforge.net>

        * generic/vfs.c: continue to #include tclPort.h, otherwise
        compilation breaks against tcl 8.4.x.

2004-04-01  Vince Darley <vincentdarley@sourceforge.net>

        * generic/vfs.c: added #include tclInt.h given recent Tcl
        changes which broke compilation.

        Fix to privately reported vfs bug with 'glob -type d -dir .  *'
        across a vfs boundary.  No tests for this are currently possible
        without effectively moving tclvfs into Tcl's test suite.

2003-11-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regen
	* tclconfig/tcl.m4: update to latest TEA that corrects calling
	order of compiler and header checks.

2003-10-30  Vince Darley <vincentdarley@sourceforge.net>

	* library/tarvfs.tcl: fix to problem with relative paths
	(Thanks Stefan).

2003-10-21  Jean-Claude Wippler  <jcw@equi4.com>

	* starkit.tcl: add starkit::mode variable, which remembers the
	return value of starkit::startup (suggestion by Andreas Kupries)
	* pkgIndex.tcl: bumped starkit version from 1.2 to 1.3

	* ChangeLog: cleaned up a few tab-vs-space indentations

2003-10-17  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: removed some compiler warnings on OS X.

2003-10-13  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: added support for TCL_GLOB_TYPE_MOUNT flag to
	the MatchInDirectory proc, which provides for more seamless
	boundaries between filesystems which allows for fixing Tcl's [Bug
	800106].  This means (with a suitable version of Tcl) that 'glob
	*/*' across a filesystem boundary will now work correctly.
	
	The code should work fine with Tcl 8.4 and 8.5, although with
	8.4.4 the mount list will never be queried.
	
	* library/pkgIndex.tcl(.in): 
	* DESCRIPTION.txt:
	* win/makefile.vc:
	* configure.in: updated version to 1.3.0 reflecting the above
	significant improvement.
	
2003-10-06  Jeff Hobbs  <jeffh@ActiveState.com>
